configs/gatekeeper/overlays/nishir/constraints.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    namespaces:
      - shikanime
  parameters:
    repos:
      - chromedp/*
      - copyparty/*
      - dock.mau.dev/mautrix/*
      - ghcr.io/hotio/*
      - ghcr.io/plastic-labs/*
      - ghcr.io/raylabshq/*
      - ghcr.io/seer-team/*
      - ghcr.io/shikanime/*
      - lscr.io/linuxserver/*
      - matrixdotorg/*
      - nousresearch/*
      - pgvector/*
      - qbittorrentofficial/*
      - rclone/*
      - vaultwarden/*
